--- a/examples/pages/Admin_user.html
+++ b/examples/pages/Admin_user.html
@@ -155,7 +155,7 @@
                                 <i class="fa fa-navicon visible-on-sidebar-mini"></i>
                             </button>
                         </div>
-                        <a class="navbar-brand" href="#pablo"> User Page </a>
+                        <a class="navbar-brand" href="#pablo"> Admin User  </a>
                     </div>
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-bar burger-lines"></span>
