--- a/examples/calendar.html
+++ b/examples/calendar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="info ">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-                            <span>Tania Andrew
+                            <span>Christian 
                                 <b class="caret"></b>
                             </span>
                         </a>
